# birdnet-scout

./: .gitignore  .pylintrc  Makefile  README.md  analyzer.py  analyzer.sh  manage.py  mprocs.yaml  pyproject.toml  recorder.sh
.kilocode/rules/: project.md
scout/: asgi.py  settings.py  urls.py  wsgi.py
src/outpost/: main.py  recorder.py
src/scout/: analyzer.py  database.py  filters.py  main.py  recorder.py  server.py  services.py
src/scout/templates/: detections.html  discoveries_badge.html  index.html  navbar.html
static/: stylesheet.css
static/fonts/: inter.css
web/: context_processors.py  forms.py  models.py  services.py  urls.py  views.py
web/fixtures/: settings.yaml
web/migrations/: 0001_initial.py  0002_alter_config_managers_alter_detection_managers.py  0003_config_timezone.py  0004_remove_config_timezone.py
web/static/web/: stylesheet.css
web/templates/: base.html  detections.html  index.html  navbar.html  settings.html
web/templates/components/: input_field.html
web/templates/partials/: healthcheck.html
web/templatetags/: filters.py
