[project]
name = "birdnet-scout"
version = "0.1.0"
description = ""
authors = [{ name = "Michael Narciso", email = "michael@freetolearn.dev" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "birdnet (>=0.1.7,<0.2.0)",
  "black (>=25.1.0,<26.0.0)",
  "loguru (>=0.7.3,<0.8.0)",
  "flask (>=3.1.1,<4.0.0)",
  "dataset (>=1.6.2,<2.0.0)",
  "djlint (>=1.36.4,<2.0.0)",
  "requests (>=2.32.3,<3.0.0)",
  "types-requests (>=2.32.0.20250602,<3.0.0.0)",
  "arrow (>=1.3.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.mypy]
ignore_missing_imports = true
